<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <DatePicker
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:padding="30dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:background="#97c39f"
        android:text="@string/ok"
        android:textColor="#FFFFFF" />
    <TextView
        android:id="@+id/result"
        android:layout_below="@+id/btn"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#97c39f"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:text="@string/number" />

    <TextView
        android:id="@+id/h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/h"
        android:layout_toLeftOf="@+id/space"
        android:textColor="#f0a49f"
        android:textSize="40sp" />
    <TextView 
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/space"
        android:text="@string/o"
        android:textColor="#97c39f"
        android:textSize="40sp" />

</RelativeLayout>